# Red_Eye_Filter

./: .gitignore  CMakeLists.txt  README.md  Solution.cpp  Solution.h  gitignore  main.cpp
utils/: CommonDefines.h  EyePatterns.h  FileParser.h  FunctionTracer.h  Image.cpp  Image.h  SolutionEvaluator.h
